large update to test framework